--- a/vignettes/Main.Rmd
+++ b/vignettes/Main.Rmd
@@ -132,72 +132,50 @@ introduced in the data section). Therefore, the following questions arise:
 
 # Data and Methodology
 
+In this section, we introduce you to the data used and the methodology
+wehave chosen. Firstly, we present the data employed in our study.
+Followingthat, we delve into the methodology, starting with the processing
+ofgeospatial layers and an explanation of how we determined which
+variablesto use. To address the research questions, we guide you through
+the 'modes'in which you can execute this workflow. Finally, we provide an
+overview ofthe implemented model.
+
 ## Data^WP1^
 
-Before starting this subchapter a brief clarification. This project uses
-cantonal land use data and federal geospatial data. These in their raw form
-are called predictor classes. These are then spatially averaged to obtain
-the actual predictors which are called geospatial layers or just
-predictors.
+To avoid misunderstanding we want to start with a brief clarification: This
+project uses cantonal land use data and federal geospatial data. These
+intheir raw form are called predictor classes. These are then spatially
+averaged to obtain the actual predictors which are called geospatial layers
+or just predictors.
 
-Temperature data for the years 2019-2022 from the network of the city of
-Bern is used. This is a numerical data set of the 3m temperature in 104
-locations, with a temporal resolution of 10 minutes for all LCDs. How many
-LCD are active depends on the year but 55 LCDs are active over the entire
-time period. The network data is publicly available on BORIS, however since
-data on BORIS is faulty at the moment we uploaded the corrected .csv-files
-to the Git- Hub Repo. The original files can be found here, as well as the
-metadata containing the logger location: <https://boris.unibe.ch/161882/>.
-We use additional data from the AWS at Zollikofen, as it is the official
-meteorologic station of Bern. The five meteorological variables (2m
-temperature, precipitation, radiation and winddirection and windspeed) with
-a temporal resolution of 10 minutes for the years 2019-2022 will be used as
-well as the timestamp. Data of temperature and precipitation of the
-previous six hours and twelve hours, and one, three and five days and ten
-days (precipitation only) will also be fed into the model. This data is
-uploaded to the repository to ensure availability since the IDAWEB-data
-service is open for scientific use but not completely open access. To show
-small scale urban patterns of temperature distributions, zonally meaned
-geospatial data as shown in @burger2021 is used. These are cantonal land
-use classes as well as federal geospatial data. All of the data is
-spatially averaged/meaned to obtain the layers most effective as shown in
-@burger2021 as well as our own take: generate three different geospatial
-layers per predictor class. The federal and cantonal data is directly
-downloaded from the web into R and processed.
-
-Table 1 provides a brief overview of the data we will use. Zonal mean
-resolution is indicated with our owns first and then the distance used by
-@burger2021.
-
-| Predictor class                                                      | Variable Type  | Zonal Mean Resolution / [3 predictors per class] [abbreviation] |
-|----------------------------------------------------------------------|----------------|-----------------------------------------------------------------|
-| 2m Temperature in °C (Zollikofen) for the time period 2019 - 2022    | Meteorological | 15 minutes / [1h mean, 6,12,24,72,120 hours rolling mean]       |
-| Precipitation in mm (Zollikofen) for the time period 2019 - 2022     | Meteorological | 15 minutes / [1h mean, 6,12,24,72,120,240 hours rolling sum]    |
-| Radiation in $W*m^{-2}$ (Zollikofen) for the time period 2019 - 2022 | Meteorological | 15 minutes / [1h mean]                                          |
-| Windspeed in $m*s^{-1}$ (Zollikofen) for the time period 2019 - 2022 | Meteorological | 15 minutes / [1h mean]                                          |
-| Winddirection in ° (Zollikofen) for the time period 2019 - 2022      | Meteorological | 15 minutes / [1h mean]                                          |
-
-time period (see table 1). The network data is publicly available on
-[BORIS](https://boris.unibe.ch/161882/), however since data on BORIS is
-faulty at the moment we uploaded the corrected .csv-files to the Git- Hub
-Repo. We use additional data from the AWS at Zollikofen, as it is the
-official meteorologic station of Bern. The five meteorological variables
-(2m temperature, precipitation, radiation and winddirection and windspeed)
-with a temporal resolution of 10 minutes for the years 2019-2022 will be
-used as well as the timestamp. Data of temperature (mean) and precipitation
-(sum) of the previous six hours and twelve hours, and one, three and five
-days (for precipitation even ten days) will also be fed into the model.
-This data is uploaded to the repository to ensure availability since the
-IDAWEB-data service is open for scientific use but not completely open
-access. To show small scale urban patterns of temperature distributions,
-geospatial data as shown in @burger2021 is used. These are cantonal land
-use classes as well as federal geospatial data. All of the data is
-spatially averaged to obtain the layers most effective as shown in
-@burger2021. The federal (meteorologic values; DEM, VH) and cantonal (all
-land cover classes: LC/OS/BH) data is directly downloaded from the web into
-R and then used as predictor classes. The geospatial layers ROU, FLAC, ASP,
-SLO are calculated based on these datasets and are then used as predictor
-classes. Table 1 provides a brief overview of the data we will use.
+Temperature data for the years 2019-2022 from the network of the city
+ofBern is used. This is a numerical data set of the 3m temperature in
+104locations, with a temporal resolution of 10 minutes for all LCDs. How
+manyLCD are active depends on the year but 55 LCDs are active over the
+entiretime period (see table 1). The network data is publicly available on
+BORIS,however since data on BORIS is faulty at the moment we uploaded
+thecorrected .csv-files to the Github Repo. The original files can be
+found[here](https://boris.unibe.ch/161882/), as well as the metadata
+containingthe logger location. We use additional data from the AWS at
+Zollikofen, asit is the official meteorologic station of Bern. The five
+meteorological variables (2m temperature, precipitation, radiation and wind
+direction and wind speed) with a temporal resolution of 10 minutes for the
+years2019-2022 will be used as well as the timestamp. Data of
+temperature(average) and precipitation (sum) of the previous six hours and
+twelve hours, and one, three and five days and ten days (precipitation
+only) will also be fed into the model. This data is uploaded to the
+repository to ensure availability since the IDAWEB-data service is open for
+scientific use but not completely open access. To show small scale urban
+patterns of temperature distributions, zonally meaned geospatial data as
+shown [in\@burger2021](mailto:in@burger2021){.email} is used. These are
+cantonal land use classes as well as federal geospatial data. All of the
+data is spatially averaged to obtain the layers most effective as shown in
+@burger2021. The federal data (meteorologic values, DEM, and VH) and
+cantonal data (all land cover classes: LC/OS/BH)is directly downloaded from
+the web into R and then used as predictor classes. The geospatial layers
+ROU, FLAC, ASP, SLO are calculated based on these data sets and are then
+used as predictor classes. Table 1 provides a brief overview of the data we
+will use.
 
 | Predictor class                                                      | Variable Type    | Zonal Mean Resolution / [3 predictors per class] [@burger2021] |
 |----------------------------------------------------------------------|------------------|----------------------------------------------------------------|
@@ -224,82 +202,68 @@ classes. Table 1 provides a brief overview of the data we will use.
 | Climate Network in °C (67 LCDs, different sides) in year 2021        | Meteorological   | 10 minutes / [1h mean]                                         |
 | Climate Network in °C (81 LCDs, different sides) in year 2022        | Meteorological   | 10 minutes / [1h mean]                                         |
 
-: **TABLE 1:** Overview of the predictors used for modeling.
-
-To illustrate the model predictions, we also want to show a spatial
-temperature distributions for a possible day as a map as a model output.
+: **Table 1:** provides a brief overview of the data we will use. Zonal
+mean resolution is indicated with our owns first and then the distance used
+by @burger2021.
 
 ## Methodology: Main Goal/Structure
 
-The methodology section is subdivided into preparation and modelling. Our
-goal is to predict the temperature anomaly of the on site location to the
-official measurement station in Zollikofen and thus the UHI. Therefore the
-target variable is the temperature and the predictor variables are a
-combination of the above stated meteorologic variables and geospatial
-layers. Models are generated later in the workflow and include a linear
-regression, a knn and a random forest. Additionally, a XGBoost and a neural
-network can be run.
+As mentioned earlier, the methodology section is subdivided into
+preparation and modeling. Our objective is to predict the temperature
+anomaly from the on-site location to the official measurement station in
+Zollikofen, and thus, the Urban Heat Island (UHI). Therefore, the target
+variable is the temperature (of the LCDs in the city of Bern). The
+predictor variables consist of a combination of the meteorological
+variables and geospatial layers as mention before. Models are generated
+later in the workflow and include linear regression, k-nearest
+neighbors(KNN), and random forest. Additionally, XGBoost and a neural
+network can be executed.
 
 ### Methodology: Preparation^WP1^
 
-In this section, all preparations for modeling are performed.
+In this initial methodology section, we conduct all preparations for
+modeling. It will provide information about the generation of geospatial
+layers. Furthermore, we explain how we decide which variables to use for
+prediction and what options you have to generate the base-file
+'Combined.csv'.
 
 #### Geospatial layers
 
 Either the geospatial layers are downloaded directly from a remote
 repository, which is the case when knitting (default). Alternatively, the
 geospatial layers are generated by downloading and processing of the
-geospatial layers as raw data from open sources. First the files are
+geospatial layers as raw data from open sources. First, the files are
 downloaded from either cantonal or federal swiss websites. Then, the
 processing goes as follows: 1) The predictor classes layers are formatted
 to be separate files. This means that for each land use class as defined by
-@burger2021 and for each geospatial layer from swisstopo there is a raster
-file which is the predictor class. 2) Then spatial extent and resolution
-are all standardized to 5 meters and the extent of the city and the
-surrounding lands. 3) Each layer then is zonally meaned. This can be
-performed with the layer resolutions by @burger2021 which corresponds to
-one predictor per predictor class in table 1. Alternatively the geospatial
-layers are all meaned by the resolutions in table 1 (3 mean layers per
-predictor class). This then finally results in three (or one in case of
-@burger2021) geospatial layers per predictor class in table 1. The data of
-the predictor classes which corresponds to the raw layers can be found in
-the data-raw subfolder of this project for the land use classes. The
-processed files can be found in the data folder in the subdirectory Tiffs.
-
-#### Data combination
-
-Data from MeteoSwiss for the Zollikofen meteostation is averaged to 1-hour
-intervals for the variables: radiation, wind speed, wind direction, 2m
-temperature, and precipitation (precipitation is summed). Subsequently,
-rolling means/sums are calculated for 6, 12, 24 hours, 3 days, and 5 days
-for both precipitation and temperature. Additionally, a 10-day rolling sum
-is computed for precipitation to capture moisture comprehensively. This
-processed data represents the MeteoSwiss meteorological dataset. Then data
-from the LCD temperature loggers in the city are read in. This is then
-combined with the **metadata**, resulting in a tidy data frame, where each
-row corresponds to a measurement of a single logger to a single point in
-time with its attributes such as its location as columns (from the
-**metadata**). Then, the values corresponding to each location of the
-loggers is read out of the geospatial predictors. This data is also added
-to the data frame. This then is the finished Combined.csv with all data.
+[\@burger2021](mailto:by@burger2021){.email} and for each geospatial layer
+from swisstopo there is a raster file which is the predictor class. 2) Then
+spatial extent and resolution are all standardized to 5 meters and the
+extent of the city and the surrounding lands. 3) Each layer then is zonally
+meaned. This can be performed with the layer resolutions by @burger2021
+which corresponds to one predictor per predictor class in table 1.
+Alternatively the geospatial layers are all meaned by the resolutions in
+table 1 (3 mean layers perpredictor class). Finally, this results in three
+(or one in case of [\@burger2021](mailto:of@burger2021){.email}) geospatial
+layers per predictor class (see table 1). The data of the predictor classes
+which corresponds to the raw layers can be found in the data-raw subfolder
+of this project for the land use classes. The processed files can be found
+in the data folder in the subdirectory Tiffs.
 
 #### Variable Selection
 
-First, variable selection was performed (see [variable
-selection](Markdown::%20Variable_Selection.rmd)). This process was only
-exculsively applied to the predictors listed i table 1, as layers by
-@burger2021 were already reduced and selected. The variable selection using
-the Boruta-algorithm revealed that, after removing variables for reasons
-unrelated to relevance (refer to table 2), all remaining variables proved
-to be relevant. While further variable selection was investigated, no
-definitive conclusions were reached. Therefore, all generated predictors
-are utilized. Table two provides a brief overview of why certain variables
-were rejected. Based on this selection, a formula is now generated, which
-is processed into a recipe. This is now the basis for creating the models.
-
-Table two provides a brief overview of why certain variables were rejected.
-Based on this selection, a formula is now generated, which is processed
-into a recipe. This is now the basis for creating the models.
+After processing the geospatial layers, a variable selection was performed
+(see [variable selection](Markdown::%20Variable_Selection.rmd)). This
+process was only exclusively applied to the predictors listed in table 1,as
+layers by @burger2021 were already reduced and selected. The variable
+selection using the Boruta-algorithm revealed that, after removing
+variables for reasons unrelated to relevance (see table 2), all remaining
+variables proved to be relevant. While further variable selection was
+investigated, no definitive conclusions were reached. Therefore, all
+generated predictors are utilized. Table 2 provides a brief overview of why
+certain variables were rejected. Based on this selection, a formula is now
+generated, which is processed into a recipe. This is now the basis for
+creating the models.
 
 |                                       |                                                                                                                                                                              |
 |---------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -310,10 +274,41 @@ into a recipe. This is now the basis for creating the models.
 | NORD_CHTOP, OST_CHTOP                 | Coordinates are not used because the model should learn the underlying pattern.                                                                                              |
 | LV_03_E, LV_03_N                      | Coordinates are not used because the model should learn the underlying pattern.                                                                                              |
 
-: TABLE 2: Overview about the reasons why a variable/column were rejected
-as a predictor.
+: **TABLE 2:** Overview about the reasons why a variable/column were
+rejected as a predictor.
 
-## How this Workflow Works^WP1, WP2^
+#### Data Combination
+
+Now that we have identified the variables to use, ensuring that the models
+contain the right information is crucial for model training. As briefly
+outlined in table 2, we decided against utilizing the timestamp due to its
+controversial relevance. However, considering that past meteorological
+conditions can influence the future, we applied various aggregations to
+thedata from MeteoSwiss for the meteostation. Specifically, we averaged the
+10-minute resolution to 1-hour intervals for the variables: radiation, wind
+speed, wind direction, 2m temperature, and precipitation (summed).
+Following this, rolling means/sums were calculated for 6, 12, 24 hours, 3
+days, and 5 days for both precipitation and temperature. Additionally, a
+10-day rolling sum was computed for precipitation to comprehensively
+capture moisture. This processed data represents the MeteoSwiss
+meteorological data set.
+
+Subsequently, data from the LCD temperature loggers in the city were readin
+and combined with the metadata. The result is a tidy data frame where each
+row corresponds to a measurement of a single logger at a specific point in
+time, with attributes such as location as columns (from themetadata).
+Afterward, the values corresponding to each location of the loggers were
+extracted from the geospatial predictors, and this data was added to the
+data frame. The outcome is the file 'Combined.csv,' which serves as the
+basis for this study.
+
+To address the research questions, you can modify the workflow by changing
+the data source of your 'Combined.csv' file. By default, it randomly
+selects 5% of our geospatial layers (downloaded from a Dropbox account) and
+the MeteoSwiss meteorological data set. The following subsection provides
+an overview of the modes within this workflow.
+
+### How this Workflow Works^WP1, WP2^
 
 In the Data and Methodology section you will see that we work with a large
 amount of data. This means the computational time could be very high. To
@@ -322,47 +317,28 @@ The file runs automatically in the most performant mode when knitting. When
 run normally, the terminal will guide you through the decision steps about
 processing. You can also change the way this files knits by changing the
 parameters manually in the knitting settings blow. Figure 1 gives you a
-overview about the default mode and all other options you have:
+overview about the default mode and all other options you have. Please note
+that the default mode is only guaranteed until the end of February 2024.
+After that, geospatial data processing that is dependent on the VH of WSL
+(Eidg. Forschungsanstalt für Wald, Schnee und Landschaft) will not be
+executed anymore and thus miss as predictor layers. This will alter the
+results.
 
-![Workflow Overview](../fig/Workflow.jpeg)
-
-Please note that the default version is only guaranteed until the end of
-February 2024. After that, geospatial data processing that is dependent on
-the VH of WSL (Eidg. Forschungsanstalt für Wald, Schnee und Landschaft)
-will not be executed anymore and thus miss as predictor layers. This will
-alter the results.
-
-### Workflow
-
-This subsection generate your basic .csv file (it is called 'Combined') in
-a interactive way when not knitting. Therefore, you have to navigate
-through some questions. There are four main options when running the scrip:
-
--   **Demo mode (reduced data set, our geospatial layser) is the default
-    verison**
-
--   **Regular mode (full data set, our geospatial layer) it is what we want
-    to investiagte and all fine tuning, evaluations, and result are based
-    on this mode)**
-
--   **Burger demo (5% of our meteorologic data but geospatial layers from
-    @burger2021)**
-
--   **Burger regular mode: full data set but geospatial layers from
-    @burger2021**
+![**Fig. 1:** Overview about the workflow](../fig/Workflow.jpeg)
 
 #### Geospatial layers
 
 The geospatial layers vary in this workflow. As described above, this
 script can run either all geospatial layers with three different zonal mean
-values [25m, 150m, 1000m] or with the zonal mean values as demonstrated by
-@burger (see table1). This can be chosen in the console when run normally.
-**Because the generation of the zonal means of the geospatial layers is
-very time-intensive (20min - 2h, depends on your device), when knitting,
-the files are always downloaded from an external source (Dropbox). When the
-files are downloaded. The version with all geospatial layers is downloaded.
-When run not knitted, the console will ask whether to download, or generate
-the geospatial means, as well as which geospatial means.**
+values [25m, 150m, 1000m] (that woud be our geospatial layers) or with the
+zonal mean values as demonstrated by @burger (see table1). This can be
+chosen in the console when run normally. Because the generation of the
+zonal means of the geospatial layers is very time-intensive (20min - 2h,
+depends on your device), when knitting, the files are always downloaded
+from an external source (Dropbox). When the files are downloaded. The
+version with all geospatial layers is downloaded. When run not knitted, the
+console will ask whether to download, or generate the geospatial means, as
+well as which geospatial means.
 
 #### Data size
 
@@ -382,6 +358,36 @@ considered secondary information. If these should be run while knitting,
 the variable advanced_models \<- "y". When run not knitted, the console
 will ask whether to run them. It is strongly recommended to only run these
 with 5% of the data!
+
+#### The Four Modes of the Workflow
+
+This subsection generates your base .csv file (calles Combined.csv)
+incorporating all the information provided above in an interactive manner
+when not knitting. Therefore, you have to navigate through some questions
+as described in figure 1. As a result, the current workflow changes to the
+mode you require. There are four main options when running the script, and
+for each, you can additionally choose whether you want to run the advanced
+models.
+
+-   Demo mode: Is the default mode and uses for the 'Combiend.csv' file
+    randomly 5% of our geospatial layer and our the MeteoSwiss
+    meteorological data set. We implemented this mode to show our work in
+    class or if you looking for a short overview. It should not be used for
+    modelling the UHI effect.
+
+-   Regular mode: Uses for the 'Combiend.csv' file our geospatial layer and
+    our MeteoSwiss meteorological data set. This is the mode we use to
+    answer the first two research questions of this study.
+
+-   Burger demo mode: Uses for the 'Combined.csv' file randomly 5% of the
+    geospatial layers of @burger2021 and our MeteoSwiss meteorological data
+    set. We implemented this mode to show how we address our third research
+    question in class.
+
+-   Burger regulat mode: Uses for the 'Combiend.csv' file our geospatial
+    layer of @burger2021 and our MeteoSwiss meteorological data set. This
+    is the mode we use to answer the third research questions of this
+    study.
 
 ### Packages
 
